[package]
name = "http-horse"
description = "HTTP Hot Reload Server for HTML, CSS, JavaScript/TypeScript and WebAssembly web development."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/http-horse"
version = "0.1.4"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["web-programming::http-server", "development-tools", "filesystem"]
keywords = ["autoreload", "html5", "css3", "js", "wasm"]
edition = "2021"

[dependencies]
bytes = "1.7.2"
clap = { version = "4.5.19", features = ["cargo", "derive"] }
fsevent = "2.1.2"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
thiserror = "1.0.64"
#tokio = { version = "1.39.3", features = ["full"] }
#tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.16"
async-stream = "0.3.6"
opener = "0.7.2"
anyhow = "1.0.89"
askama = { version = "0.12.1", features = ["serde-json"] }
serde = { version = "1.0.210", features = ["derive"] }
smol = "2.0.2"
trie-hard = "0.1.0"
ctrlc = "3.4.5"
smol-hyper = "0.1.1"
tempfile = "3.13.0"
